--- a/apps/doc/src/app/components/skeleton/examples/base/skeleton-base-example.component.html
+++ b/apps/doc/src/app/components/skeleton/examples/base/skeleton-base-example.component.html
@@ -17,11 +17,13 @@
   </div>
 
   <div>
-    <prizm-select
-      [formControl]="selectControl"
-      [items]="items"
-      [prizmSkeleton]="activeControl.value"
-    ></prizm-select>
+    <prizm-input-layout [label]="'Выберите из списка'">
+      <prizm-input-select
+        [formControl]="selectControl"
+        [items]="items"
+        [prizmSkeleton]="activeControl.value"
+      ></prizm-input-select>
+    </prizm-input-layout>
   </div>
 
   <div>
