--- a/apps/doc/src/app/components/stepper/examples/stepper-basic-example/stepper-basic-example.component.html
+++ b/apps/doc/src/app/components/stepper/examples/stepper-basic-example/stepper-basic-example.component.html
@@ -10,13 +10,9 @@
     [disabled]="steps[1].disabled"
   >
     <div>
-      <prizm-select
-        [(ngModel)]="steps[1].status"
-        [items]="statusItems"
-        [label]="'Состояние'"
-        [forceClear]="false"
-      >
-      </prizm-select>
+      <prizm-input-layout [label]="'Состояние'" [forceClear]="false">
+        <prizm-input-select [(ngModel)]="steps[1].status" [items]="statusItems"></prizm-input-select>
+      </prizm-input-layout>
 
       <div class="next-step-disabled-container">
         <prizm-checkbox [(ngModel)]="steps[2].disabled">Шаг 2 disabled</prizm-checkbox>
@@ -46,13 +42,10 @@
     [disabled]="steps[2].disabled"
   >
     <div>
-      <prizm-select
-        [(ngModel)]="steps[2].status"
-        [items]="statusItems"
-        [label]="'Состояние'"
-        [forceClear]="false"
-      >
-      </prizm-select>
+      <prizm-input-layout [label]="'Состояние'" [forceClear]="false">
+        <prizm-input-select [(ngModel)]="steps[2].status" [items]="statusItems"></prizm-input-select>
+      </prizm-input-layout>
+
       <div class="next-step-disabled-container">
         <prizm-checkbox [(ngModel)]="steps[3].disabled">Шаг 3 disabled</prizm-checkbox>
       </div>
@@ -85,13 +78,9 @@
     [disabled]="steps[3].disabled"
   >
     <div>
-      <prizm-select
-        [(ngModel)]="steps[3].status"
-        [items]="statusItems"
-        [label]="'Состояние'"
-        [forceClear]="false"
-      >
-      </prizm-select>
+      <prizm-input-layout [label]="'Состояние'" [forceClear]="false">
+        <prizm-input-select [(ngModel)]="steps[3].status" [items]="statusItems"></prizm-input-select>
+      </prizm-input-layout>
 
       <div class="next-step-disabled-container">
         <prizm-checkbox [(ngModel)]="steps[4].disabled">Шаг 4 disabled</prizm-checkbox>
@@ -126,13 +115,10 @@
     [disabled]="steps[4].disabled"
   >
     <div>
-      <prizm-select
-        [(ngModel)]="steps[4].status"
-        [items]="statusItems"
-        [label]="'Состояние'"
-        [forceClear]="false"
-      >
-      </prizm-select>
+      <prizm-input-layout [label]="'Состояние'" [forceClear]="false">
+        <prizm-input-select [(ngModel)]="steps[4].status" [items]="statusItems"></prizm-input-select>
+      </prizm-input-layout>
+
       <div class="next-step-disabled-container">
         <prizm-checkbox [(ngModel)]="steps[5].disabled">Шаг 5 disabled</prizm-checkbox>
       </div>
@@ -169,13 +155,9 @@
     [disabled]="steps[5].disabled"
   >
     <div>
-      <prizm-select
-        [(ngModel)]="steps[5].status"
-        [items]="statusItems"
-        [label]="'Состояние'"
-        [forceClear]="false"
-      >
-      </prizm-select>
+      <prizm-input-layout [label]="'Состояние'" [forceClear]="false">
+        <prizm-input-select [(ngModel)]="steps[5].status" [items]="statusItems"></prizm-input-select>
+      </prizm-input-layout>
     </div>
     <br />
     <div>
