--- a/libs/components/src/lib/components/tabs/components/tab.component.less
+++ b/libs/components/src/lib/components/tabs/components/tab.component.less
@@ -7,6 +7,7 @@
     border: none;
     outline: none;
     background: transparent;
+    max-width: var(--prizm-tab-button-max-width, unset);
   }
 
   span {
