--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-simple/prizm-navigation-item-simple.component.html
@@ -1,7 +1,5 @@
 <div class="nav" [class.nav_active]="isActive$ | async" (click)="navClick()">
-  <span class="nav__title" [style.marginLeft.px]="deep > 0 ? (deep - 1) * 24 : 0"
-    >{{ menuItem?.title }}!</span
-  >
+  <span class="nav__title" [style.marginLeft.px]="deep > 0 ? (deep - 1) * 24 : 0">{{ menuItem?.title }}</span>
   <div class="nav__status">
     <div
       class="indicator indicator_{{ menuItem?.indicatorStatus }}"
