--- a/libs/components/src/lib/components/header/components/prizm-header-module-btn/prizm-header-module-btn.component.less
+++ b/libs/components/src/lib/components/header/components/prizm-header-module-btn/prizm-header-module-btn.component.less
@@ -18,7 +18,7 @@
       font-size: 12px;
       line-height: 16px;
       font-weight: 600;
-      color: var(--prizm-exceptions-white);
+      color: var(--prizm-v3-text-icon-exception);
 
       white-space: nowrap;
       overflow: hidden;
@@ -30,23 +30,23 @@
       transform: translate(30%, -30%);
 
       &_info {
-        background: var(--prizm-index-plan);
+        background: var(--prizm-v3-status-info-primary-default);
       }
 
       &_secondary {
-        background: var(--prizm-border-forms);
+        background: var(--prizm-v3-status-none-primary-default);
       }
 
       &_success {
-        background: var(--prizm-index-good);
+        background: var(--prizm-v3-status-success-primary-default);
       }
 
       &_warning {
-        background: var(--prizm-index-warning);
+        background: var(--prizm-v3-status-warning-primary-default);
       }
 
       &_danger {
-        background: var(--prizm-index-danger);
+        background: var(--prizm-v3-status-alarm-primary-default);
       }
     }
   }
@@ -58,7 +58,7 @@
     font-size: 12px;
     line-height: 16px;
 
-    color: var(--prizm-text-subscript);
+    color: var(--prizm-v3-text-icon-tertiary);
 
     white-space: nowrap;
     overflow: hidden;
