--- a/libs/components/src/lib/components/header/prizm-header.component.less
+++ b/libs/components/src/lib/components/header/prizm-header.component.less
@@ -5,7 +5,7 @@
   display: flex;
 
   background: var(--prizm-bg-header);
-  border-bottom: 1px solid var(--prizm-border-forms);
+  border-bottom: 1px solid var(--prizm-v3-background-stroke);
 
   overflow: hidden;
 }
