feat: navigation v3 colors #1186

--- a/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.less
+++ b/libs/components/src/lib/components/navigation/components/prizm-navigation-item-expandable/prizm-navigation-item-expandable.component.less
@@ -107,6 +107,9 @@
 
       &_active {
         background: var(--prizm-v3-table-fill-row-active);
+        .nav__icon {
+          color: var(--prizm-v3-text-icon-primary);
+        }
       }
     }
 
