--- a/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.less
+++ b/libs/components/src/lib/components/header/components/prizm-header-dropdown/prizm-header-dropdown.component.less
@@ -41,6 +41,10 @@
         transform: rotate(90deg);
         color: var(--prizm-v3-text-icon-primary);
       }
+
+      .screen__icon {
+        color: var(--prizm-v3-text-icon-primary);
+      }
     }
   }
 }
@@ -88,10 +92,14 @@
 
     &.selected {
       background: var(--prizm-header-dropdown-selected-background, var(--prizm-v3-table-fill-row-active));
-      color: var(--prizm-text-contrast);
+      color: var(--prizm-v3-text-icon-primary);
+
+      .screen__icon {
+        color: var(--prizm-v3-text-icon-primary);
+      }
     }
 
-    &:hover {
+    &:hover:not(.selected) {
       background: var(--prizm-v3-table-fill-row-hover);
     }
   }
