--- a/libs/components/src/lib/components/header/prizm-header.component.less
+++ b/libs/components/src/lib/components/header/prizm-header.component.less
@@ -4,7 +4,7 @@
 
   display: flex;
 
-  background: var(--prizm-bg-header);
+  background: var(--prizm-v3-background-fill-panel);
   border-bottom: 1px solid var(--prizm-v3-background-stroke);
 
   overflow: hidden;
