feat: language switcher

--- a/apps/doc/src/app/how-to-work/internationalization/examples/language-switcher/language-switcher-example.component.html
+++ b/apps/doc/src/app/how-to-work/internationalization/examples/language-switcher/language-switcher-example.component.html
@@ -1,5 +1,5 @@
-<button (click)="changeLanguage('en')" prizmButton appearance="primary" size="xl">English</button>
-<button (click)="changeLanguage('ru')" prizmButton appearance="primary" size="xl">Русский</button>
+<button (click)="changeLanguage('english')" prizmButton appearance="primary" size="xl">English</button>
+<button (click)="changeLanguage('russian')" prizmButton appearance="primary" size="xl">Русский</button>
 
 <br />
 <br />
