--- a/apps/doc/src/app/logo/logo.component.html
+++ b/apps/doc/src/app/logo/logo.component.html
@@ -5,8 +5,14 @@
   <prizm-toggle [ngModel]="isNight$ | async" (ngModelChange)="onMode($event)" iconOn="social-sun">
   </prizm-toggle>
 </div>
-<div class="sub-text x-margin prizm-font-input-text-14px">
-  <span> Индустриальная дизайн-система </span>
+<div
+  class="sub-text x-margin prizm-font-input-text-14px"
+  *prizmLet="languageSwitcher.language$ | async as language"
+>
+  <span *ngIf="language === 'russian'; else baseTemplate"> Индустриальная дизайн-система </span>
+  <ng-template #baseTemplate>
+    <span> Industrial design system </span>
+  </ng-template>
   <a class="icon" target="_blank" href="https://github.com/zyfra/Prizm">
     <prizm-icons-svg [size]="24" [name]="githubSvgName"></prizm-icons-svg>
   </a>
