--- a/apps/doc/src/app/version-manager/version-manager.component.html
+++ b/apps/doc/src/app/version-manager/version-manager.component.html
@@ -1,16 +1,22 @@
 <div class="i18-block">
   <tui-select
     class="select full-width"
-    [ngModel]="languageManager.code$ | async"
-    (ngModelChange)="languageManager.setLanguage($event)"
+    [ngModel]="languageManager.language$ | async"
+    [valueContent]="valueContentLanguage"
+    [identityMatcher]="languageIdentityMatcher"
+    (ngModelChange)="languageSwitcher.setLanguage($event.code)"
     tuiTextfieldSize="s"
   >
     <tui-data-list *tuiDataList>
-      <button *ngFor="let language of languages" [value]="language.code" tuiOption>
+      <button *ngFor="let language of languages" [value]="language" tuiOption>
         {{ language.label }}
       </button>
     </tui-data-list>
   </tui-select>
+
+  <ng-template #valueContentLanguage let-language>
+    {{ language.label }}
+  </ng-template>
 </div>
 
 <div class="select-block">
