--- a/libs/doc/base/src/lib/components/navigation/navigation.component.html
+++ b/libs/doc/base/src/lib/components/navigation/navigation.component.html
@@ -2,6 +2,7 @@
 <tui-input
   class="t-input"
   #input
+  *prizmLet="labels$ | async as labelsList"
   [formControl]="search"
   [tuiAutoFocus]="!!sidebar"
   [tuiTextfieldCleaner]="true"
@@ -12,7 +13,10 @@
   {{ searchText }}
   <ng-container *ngIf="canOpen">
     <tui-data-list *tuiDataList [class.is-full]="!(filtered$ | async | prizmCallFunc : isEmpty)">
-      <tui-opt-group *ngFor="let group of filtered$ | async; let index = index" [label]="labels[index] || ''">
+      <tui-opt-group
+        *ngFor="let group of filtered$ | async; let index = index"
+        [label]="labelsList[index] || ''"
+      >
         <a *ngFor="let item of group" [routerLink]="item.route" (click)="onClick(input)" tuiOption>
           {{ item.title }}
           <ng-template *ngTemplateOutlet="statusLabel; context: { $implicit: item.status }"></ng-template>
@@ -22,11 +26,11 @@
   </ng-container>
 </tui-input>
 
-<nav class="t-navigation">
+<nav class="t-navigation" *prizmLet="items$ | async as itemsList">
   <tui-scrollbar class="t-scrollbar" [tuiMode]="mode$ | async">
     <tui-accordion [closeOthers]="false" [rounded]="false">
       <tui-accordion-item
-        *ngFor="let label of labels; index as index"
+        *ngFor="let label of labels$ | async; index as index"
         [(open)]="!!openPagesArr[index]"
         [borders]="null"
         size="s"
@@ -37,7 +41,7 @@
         <ng-template tuiAccordionItemContent>
           <div class="t-section">
             <ng-container
-              *ngFor="let item of items[index]; index as subIndex"
+              *ngFor="let item of itemsList[index]; index as subIndex"
               [ngTemplateOutlet]="pages"
               [ngTemplateOutletContext]="{ item: item, index: index * 100 + subIndex }"
             ></ng-container>
@@ -47,9 +51,9 @@
     </tui-accordion>
     <div class="t-items-container">
       <ng-container
-        *ngFor="let item of itemsWithoutSections; let index = index"
+        *ngFor="let item of itemsWithoutSections(itemsList); let index = index"
         [ngTemplateOutlet]="pages"
-        [ngTemplateOutletContext]="{ item: item, index: items.length - 1 + index }"
+        [ngTemplateOutletContext]="{ item: item, index: itemsList.length - 1 + index }"
       ></ng-container>
     </div>
 
