--- a/libs/components/src/lib/components/input/common/styles/input.component.less
+++ b/libs/components/src/lib/components/input/common/styles/input.component.less
@@ -19,7 +19,7 @@
 :host-context(.prizm-input-form-inner) {
   padding: 22px 8px 4px 0px;
 
-  &:host-context(.prizm-input-empty-label) {
+  &:host-context(.prizm-input-empty-label:not(.prizm-input-form-textarea)) {
     padding-top: 4px;
 
     &::placeholder {
@@ -44,14 +44,14 @@
 :host-context(.prizm-input-form-inner[data-size='l']) {
   padding: 22px 8px 4px 0px;
 
-  &:host-context(.prizm-input-empty-label) {
+  &:host-context(.prizm-input-empty-label:not(.prizm-input-form-textarea)) {
     padding-top: 4px;
   }
 }
 :host-context(.prizm-input-form-inner[data-size='m']) {
   padding: 16px 8px 2px 0px;
 
-  &:host-context(.prizm-input-empty-label) {
+  &:host-context(.prizm-input-empty-label:not(.prizm-input-form-textarea)) {
     padding-top: 2px;
   }
 }
