feat(components/input-zone): add hook on update value and fix bug #1092

--- a/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
@@ -2,3 +2,9 @@
   <prizm-input-layout-date-range [formControl]="value" [min]="min" [max]="max">
   </prizm-input-layout-date-range>
 </prizm-input-layout>
+
+<div>
+  <div>min: {{ min?.toString() ?? '' }}</div>
+  <div>max: {{ max?.toString() ?? '' }}</div>
+  <div>value: {{ value?.toString() ?? '' }}</div>
+</div>
