fix(doc): to stirng date range value

--- a/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
@@ -6,5 +6,5 @@
 <div>
   <div>min: {{ min?.toString() ?? '' }}</div>
   <div>max: {{ max?.toString() ?? '' }}</div>
-  <div>value: {{ value?.toString() ?? '' }}</div>
+  <div>value: {{ value?.value?.toString() ?? '' }}</div>
 </div>
