fix(doc/input-password): added placeholder to api page

--- a/apps/doc/src/app/components/input/input-password/input-password-example.component.html
+++ b/apps/doc/src/app/components/input/input-password/input-password-example.component.html
@@ -45,6 +45,15 @@
       hostComponentKey="PrizmInputTextComponent"
     >
       <ng-template
+        [(documentationPropertyValue)]="placeholder"
+        documentationPropertyName="placeholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Placeholder
+      </ng-template>
+
+      <ng-template
         [(documentationPropertyValue)]="value"
         documentationPropertyName="value"
         documentationPropertyType="any"
