feat: change imports to standalone component

--- a/apps/doc/src/app/components/icons/svg/icon.component.html
+++ b/apps/doc/src/app/components/icons/svg/icon.component.html
@@ -75,7 +75,7 @@
       <li>
         <p>
           Import
-          <code>PrizmIconsSvgModule</code>
+          <code>PrizmIconsSvgComponent</code>
           into a module where you want to use our component
         </p>
 
