feat(i18n): added directive prizmIfLange

--- a/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/i18n/file-upload-i18n-example.component.html
@@ -10,5 +10,8 @@
   (filesCountError)="onFilesCountError($event)"
   (retry)="retry($event)"
 >
-  Maximum of three images up to 1MB in size
+  <ng-container *prizmIfLang="'russian'; else eng">
+    Максимум три изображения размером не более 1МБ
+  </ng-container>
+  <ng-template #eng> Maximum of three images up to 1MB in size </ng-template>
 </prizm-file-upload>
