--- a/apps/doc/src/app/components/file-upload/examples/basic/basic.component.html
+++ b/apps/doc/src/app/components/file-upload/examples/basic/basic.component.html
@@ -10,7 +10,10 @@
   (filesCountError)="onFilesCountError($event)"
   (retry)="retry($event)"
 >
-  Максимум три изображения размером не более 1МБ
+  <ng-container *prizmIfLang="'russian'; else eng">
+    Максимум три изображения размером не более 1МБ
+  </ng-container>
+  <ng-template #eng> Maximum of three images up to 1MB in size </ng-template>
 </prizm-file-upload>
 
 <button
