--- a/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/dialog-example.component.html
@@ -6,7 +6,11 @@
     <prizm-doc-example id="base" [content]="exampleBasic" heading="Base">
       <prizm-dialog-service-example></prizm-dialog-service-example>
     </prizm-doc-example>
-    <prizm-doc-example id="outer-header" [content]="exampleBasic" heading="Outer Header With Context">
+    <prizm-doc-example
+      id="outer-header"
+      [content]="exampleWightOuterHeader"
+      heading="Outer Header With Context"
+    >
       <prizm-dialog-outer-header-example></prizm-dialog-outer-header-example>
     </prizm-doc-example>
     <prizm-doc-example id="with-buttons" [content]="exampleWithButtons" heading="With Footer">
