fix(components/cron-human-readable-text): fix passed language

--- a/apps/doc/src/app/components/cron-human-readable/cron-human-readable.component.html
+++ b/apps/doc/src/app/components/cron-human-readable/cron-human-readable.component.html
@@ -7,7 +7,7 @@
     <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
       <prizm-cron-base-example></prizm-cron-base-example>
     </prizm-doc-example>
-    <prizm-doc-example id="func" [content]="exampleFunc" heading="Func">
+    <prizm-doc-example id="func" [content]="exampleFunc" heading="With passed langugage">
       <prizm-cron-func-example></prizm-cron-func-example>
     </prizm-doc-example>
   </ng-template>
