--- a/apps/doc/src/app/components/cron-human-readable/examples/base/cron-base-example.component.html
+++ b/apps/doc/src/app/components/cron-human-readable/examples/base/cron-base-example.component.html
@@ -3,6 +3,6 @@
   <b>0 0 * ? * * *</b>
 </div>
 <div class="box">
-  Result:
-  <b>{{ '0 0 * ? * * *' | prizmCronHumanReadable }}</b>
+  With Pipe:
+  <b>{{ '0 0 * ? * * *' | prizmCronHumanReadable | async }}</b>
 </div>
