feat(components/skeleton): disable box-shadow when skeleton is active

--- a/libs/components/src/styles/skeleton/skeleton.less
+++ b/libs/components/src/styles/skeleton/skeleton.less
@@ -6,6 +6,9 @@
   background: transparent !important;
   pointer-events: none;
   user-select: none;
+  border-color: transparent !important;
+  outline-color: transparent !important;
+  box-shadow: none !important;
 
   &:after {
     .fullsize();
