--- a/apps/doc/src/app/components/skeleton/examples/base/skeleton-base-example.component.html
+++ b/apps/doc/src/app/components/skeleton/examples/base/skeleton-base-example.component.html
@@ -17,12 +17,8 @@
   </div>
 
   <div>
-    <prizm-input-layout [label]="'Выберите из списка'">
-      <prizm-input-select
-        [formControl]="selectControl"
-        [items]="items"
-        [prizmSkeleton]="activeControl.value"
-      ></prizm-input-select>
+    <prizm-input-layout [prizmSkeleton]="activeControl.value" [label]="'Выберите из списка'">
+      <prizm-input-select [formControl]="selectControl" [items]="items"></prizm-input-select>
     </prizm-input-layout>
   </div>
 
