fix(comfirm-popup): small fixes

--- a/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
+++ b/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
@@ -57,6 +57,15 @@
 
     <prizm-doc-documentation [hasTestId]="true" heading="PrizmInputText" hostComponentKey="PrizmInputText">
       <ng-template
+        [(documentationPropertyValue)]="placeholder"
+        documentationPropertyName="placeholder"
+        documentationPropertyType="string"
+        documentationPropertyMode="input"
+      >
+        Placeholder
+      </ng-template>
+
+      <ng-template
         [(documentationPropertyValue)]="value"
         documentationPropertyName="value"
         documentationPropertyType="any"
