--- a/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
+++ b/libs/components/src/lib/components/internal/primitive-year-month-pagination/primitive-year-month-pagination.component.html
@@ -1,7 +1,7 @@
 <div class="box">
   <div class="year-month prizm-font-input-text-14px">
     <div *ngIf="oneMonth; else buttonMonth">
-      {{ value | prizmMonth | async }}
+      {{ value?.month | prizmMonth | async }}
     </div>
 
     <div *ngIf="oneYear; else button">
@@ -47,7 +47,7 @@
       [prizmFocusable]="true"
       type="button"
     >
-      {{ value | prizmMonth | async }}
+      {{ value?.month | prizmMonth | async }}
       <span>
         <prizm-icon iconClass="chevrons-dropdown-small"></prizm-icon>
       </span>
