--- a/libs/components/src/lib/components/switcher/switcher.component.html
+++ b/libs/components/src/lib/components/switcher/switcher.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-  <ng-container *ngFor="let switcher of switchers; let i = index">
+  <ng-container *ngFor="let switcher of activeSwitchers; let i = index">
     <prizm-switcher-item
       class="switcher-item"
-      *ngIf="!switcher.hide"
       [attr.first-child]="i === 0"
       [attr.last-child]="i === switchers.length - 1"
       [data]="$any(switcher)"
