--- a/libs/components/src/lib/components/table/tr/tr.component.less
+++ b/libs/components/src/lib/components/table/tr/tr.component.less
@@ -1,6 +1,5 @@
 [prizmTbody] tr[prizmTr] {
   cursor: var(--prizm-table-row-cursor, pointer);
-
   color: var(--prizm-text-icon-secondary);
 
   background: var(--prizm-table-row-background, var(--prizm-background-fill-primary));
@@ -35,5 +34,11 @@
     &:hover {
       background: var(--prizm-status-alarm-secondary-hover);
     }
+  }
+}
+
+table[prizmTable][border-style='vertical'] {
+  tr[prizmTr]:last-child td[prizmTd] {
+    border-bottom: 1px solid var(--prizm-table-stroke-cell-default);
   }
 }
