feat(doc): added ability to change current tokens

--- a/apps/doc/src/app/logo/logo.component.html
+++ b/apps/doc/src/app/logo/logo.component.html
@@ -2,8 +2,22 @@
   <a href="http://prizm.zyfra.com/" target="_blank">
     <img src="/assets/logos/logo-dark.svg" />
   </a>
-  <prizm-toggle [ngModel]="isNight$ | async" (ngModelChange)="onMode($event)" iconOn="social-sun">
-  </prizm-toggle>
+
+  <div class="buttons-block">
+    <prizm-toggle
+      [ngModel]="isNight$ | async"
+      (ngModelChange)="onMode($event)"
+      iconOn="social-sun"
+    ></prizm-toggle>
+
+    <prizm-icons-svg
+      class="theme-tokens-updater"
+      [size]="24"
+      [name]="PrizmIconSvgEnum.SHAPE_GEOMETRY_SQUARE_CIRCLE_PLUS_TRIANGLE_FILL"
+      (click)="openThemeChanger()"
+    >
+    </prizm-icons-svg>
+  </div>
 </div>
 <div
   class="sub-text x-margin prizm-font-input-text-14px"
