fix: text color

--- a/apps/doc/src/app/theme-token-changer/theme-token-changer.component.less
+++ b/apps/doc/src/app/theme-token-changer/theme-token-changer.component.less
@@ -37,7 +37,7 @@
 }
 
 .theme-tokens-updater {
-  color: black;
+  color: var(--prizm-text-icon-primary);
   cursor: pointer;
 
   &:hover {
@@ -68,8 +68,10 @@
 
 .box {
   max-height: 500px;
+  height: 500px;
 }
 
 .theme-title {
   text-transform: capitalize;
+  color: var(--prizm-text-icon-primary);
 }
