fix: save changes after update

--- a/apps/doc/src/app/theme-token-changer/theme-token-changer.component.html
+++ b/apps/doc/src/app/theme-token-changer/theme-token-changer.component.html
@@ -21,6 +21,7 @@
       >
       </prizm-icons-svg>
 
+      <!--      TODO after fix taiga theme and local updater-->
       <!--      <prizm-toggle-->
       <!--        [ngModel]="isNight$ | async"-->
       <!--        (ngModelChange)="onMode($event)"-->
