fix: accordion styles fixes #1116, #1236, #1285

--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
@@ -36,6 +36,7 @@
     <div class="btn-wrapper">
       <button
         class="accordion__button"
+        [class.accordion_expanded__button]="isExpanded"
         [icon]="'chevrons-double-down'"
         [disabled]="disabled"
         prizmIconButton
