fix: custom title example fix #1240

--- a/apps/doc/src/app/components/accordion/examples/custom-title/custom-title.component.html
+++ b/apps/doc/src/app/components/accordion/examples/custom-title/custom-title.component.html
@@ -1,7 +1,7 @@
 <prizm-accordion>
-  <prizm-accordion-item class="custom" *ngFor="let item of items" [title]="title">
+  <prizm-accordion-item *ngFor="let item of items" [title]="title">
     <ng-template #title>
-      <span [prizmHint]="item.hint"> {{ item.title }} </span>
+      <span class="custom" [prizmHint]="item.hint"> {{ item.title }} </span>
     </ng-template>
 
     <ng-template prizmAccordionContent>
