--- a/apps/doc/src/app/app.component.html
+++ b/apps/doc/src/app/app.component.html
@@ -1,4 +1,4 @@
-<prizm-doc-main #docRef (contentReady)="contentReady($event)">
+<prizm-doc-main #docRef>
   <ng-container prizmPreNavigationHeader>
     <prizm-doc-logo></prizm-doc-logo>
   </ng-container>
