--- a/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/libs/components/src/lib/components/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="host" prizmFocusTrap prizmTheme>
+<div class="host" [prizmTheme]="theme" prizmFocusTrap>
   <div class="content">
     <div class="title prizm-font-title-h4">
       <ng-container *polymorphOutlet="$any(context.title) as data; context: context">
