--- a/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
+++ b/libs/components/src/lib/components/dialogs/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="box" prizmFocusTrap prizmTheme>
+<div class="box" [prizmTheme]="theme" prizmFocusTrap>
   <div
     class="header prizm-font-title-h4"
     *ngIf="context.headerTemplate ?? context.header"
