--- a/libs/doc/base/src/lib/components/main/main.template.html
+++ b/libs/doc/base/src/lib/components/main/main.template.html
@@ -1,7 +1,7 @@
 <tui-theme-night *ngIf="night"></tui-theme-night>
 <tui-root>
   <div class="prizm-doc-page">
-    <prizm-doc-navigation class="prizm-doc-navigation">
+    <prizm-doc-navigation class="prizm-doc-navigation" [prizmTheme]="'dark'">
       <ng-container prizmPreHeader>
         <ng-content select="[prizmPreNavigationHeader]"></ng-content>
       </ng-container>
@@ -11,17 +11,6 @@
       <router-outlet class="tui-doc-outlet"></router-outlet>
     </div>
   </div>
-  <!--    <header prizmDocHeader>-->
-  <!--        <label class="night-mode">-->
-  <!--            Night mode-->
-  <!--            <tui-toggle-->
-  <!--                class="tui-toggle"-->
-  <!--                [ngModel]="night"-->
-  <!--                (ngModelChange)="onMode($event)"-->
-  <!--            ></tui-toggle>-->
-  <!--        </label>-->
-  <!--        <ng-content select="prizmDocHeader"></ng-content>-->
-  <!--    </header>-->
   <ng-container ngProjectAs="tuiOverContent">
     <ng-content select="tuiOverContent"></ng-content>
   </ng-container>
