fix: listing item selected item hover for 4.0 #1280

--- a/libs/components/src/lib/components/listing-item/listing-item.component.less
+++ b/libs/components/src/lib/components/listing-item/listing-item.component.less
@@ -29,8 +29,8 @@
       }
     }
 
-    &.item-container__selected:not(.item-container__disabled):has(.container-left:not(:empty)):hover {
-      background-color: var(--prizm-listing-item-row-instruments-hover, var(--prizm-table-fill-row-hover));
+    &.item-container__selected:not(.item-container__disabled):hover {
+      background-color: var(--prizm-listing-item-row-selected-hover, var(--prizm-table-fill-row-active));
     }
 
     &:active,
