--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
@@ -4,6 +4,8 @@
   [class.prizm-navigation-menu-item_hovered]="isHovered"
   [class.prizm-navigation-menu-item_expandable]="isExpandable"
   [tabindex]="0"
+  [prizmHint]="item.text"
+  [prizmHintCanShow]="prizmIsTextOverflow(elem)"
   (keydown.space)="interaction.emit(item)"
   (keydown.enter)="interaction.emit(item)"
   (click)="interaction.emit(item)"
@@ -14,7 +16,7 @@
     *ngIf="item.icon"
     [name]="item.icon"
   ></prizm-icons-svg>
-  <p class="prizm-navigation-menu-item__text">
+  <p class="prizm-navigation-menu-item__text" #elem>
     {{ item.text }}
   </p>
   <div class="prizm-navigation-menu-item__extra">
