fix: accordion example title fix

--- a/apps/doc/src/app/components/accordion/examples/accordion-single-expand-example/accordion-single-expand-example.component.html
+++ b/apps/doc/src/app/components/accordion/examples/accordion-single-expand-example/accordion-single-expand-example.component.html
@@ -1,5 +1,5 @@
 <prizm-accordion [onlyOneExpanded]="true">
-  <prizm-accordion-item title="Static_title_h3 - 16 Medium">
+  <prizm-accordion-item [title]="'Static_title_h3 - 16 Medium'">
     <ng-template prizmAccordionContent>
       Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
       стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник
@@ -10,7 +10,7 @@
       используется Lorem Ipsum.
     </ng-template>
   </prizm-accordion-item>
-  <prizm-accordion-item title="Title number 2">
+  <prizm-accordion-item [title]="'Title number 2'">
     <ng-template prizmAccordionTools>
       <prizm-checkbox label="Checkbox label is here"></prizm-checkbox>
     </ng-template>
@@ -25,7 +25,7 @@
       - фатальная ошибка.
     </ng-template>
   </prizm-accordion-item>
-  <prizm-accordion-item title="Title number 3">
+  <prizm-accordion-item [title]="'Title number 3'">
     <ng-template prizmAccordionTools>
       <prizm-checkbox label="Checkbox label is here but..."></prizm-checkbox>
     </ng-template>
@@ -40,7 +40,7 @@
       - фатальная ошибка.
     </ng-template>
   </prizm-accordion-item>
-  <prizm-accordion-item title="Title number 4">
+  <prizm-accordion-item [title]="'Title number 4'">
     <ng-template prizmAccordionContent>
       Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
       стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник
