--- a/apps/doc/src/app/components/accordion/examples/nested/nested.component.html
+++ b/apps/doc/src/app/components/accordion/examples/nested/nested.component.html
@@ -1,17 +1,17 @@
 <prizm-accordion>
-  <prizm-accordion-item title="Title number 1">
+  <prizm-accordion-item [title]="'Title number 1'">
     <ng-template prizmAccordionContent>
       <prizm-accordion class="nested">
-        <prizm-accordion-item title="Static_title_h3 - 16 Medium">
+        <prizm-accordion-item [title]="'Static_title_h3 - 16 Medium'">
           <ng-template prizmAccordionContent> nested content 1 </ng-template>
         </prizm-accordion-item>
-        <prizm-accordion-item title="Title number 2">
+        <prizm-accordion-item [title]="'Title number 2'">
           <ng-template prizmAccordionContent> nested content 2 </ng-template>
         </prizm-accordion-item>
       </prizm-accordion>
     </ng-template>
   </prizm-accordion-item>
-  <prizm-accordion-item title="Title number 2">
+  <prizm-accordion-item [title]="'Title number 2'">
     <ng-template prizmAccordionContent>
       Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является
       стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник
